RESOLVED FIXED197347
[iOS]Double-tapping a post to like doesn't work on Instagram.com (needs 'dblclick' event)
https://bugs.webkit.org/show_bug.cgi?id=197347
Summary [iOS]Double-tapping a post to like doesn't work on Instagram.com (needs 'dblc...
alan
Reported 2019-04-27 16:45:23 PDT
Attachments
Patch (16.01 KB, patch)
2019-04-27 16:48 PDT, alan
no flags
Archive of layout-test-results from ews122 for ios-simulator-wk2 (204.56 MB, application/zip)
2019-04-27 20:09 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews121 for ios-simulator-wk2 (237.09 MB, application/zip)
2019-04-27 22:44 PDT, EWS Watchlist
no flags
Patch (24.03 KB, patch)
2019-04-29 12:39 PDT, alan
no flags
Patch (24.07 KB, patch)
2019-04-29 13:45 PDT, alan
no flags
Patch (24.14 KB, patch)
2019-04-29 21:19 PDT, alan
no flags
alan
Comment 1 2019-04-27 16:48:01 PDT
EWS Watchlist
Comment 2 2019-04-27 20:08:11 PDT
Comment on attachment 368416 [details] Patch Attachment 368416 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/12019552 New failing tests: http/tests/paymentrequest/payment-response-payerName-attribute.https.html http/tests/paymentrequest/payment-request-abort-method.https.html http/tests/paymentrequest/payment-response-payerPhone-attribute.https.html http/tests/adClickAttribution/anchor-tag-attributes-validation.html http/tests/paymentrequest/updateWith-method-pmi-handling.https.html http/tests/paymentrequest/payment-response-complete-method.https.html http/tests/paymentrequest/payment-response-rejects-if-not-active.https.html http/tests/paymentrequest/payment-request-canmakepayment-method.https.html http/tests/paymentrequest/payment-response-payerEmail-attribute.https.html http/tests/paymentrequest/payment-response-retry-method.https.html http/tests/paymentrequest/rejects_if_not_active.https.html http/tests/paymentrequest/payment-request-merchant-validation.https.html http/tests/paymentrequest/payment-request-show-method.https.html http/tests/paymentrequest/payment-response-reference-cycle-leak.https.html
EWS Watchlist
Comment 3 2019-04-27 20:09:57 PDT
Created attachment 368423 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.4
EWS Watchlist
Comment 4 2019-04-27 22:44:18 PDT
Comment on attachment 368416 [details] Patch Attachment 368416 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: https://webkit-queues.webkit.org/results/12020636 New failing tests: http/tests/paymentrequest/payment-response-payerName-attribute.https.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-no-extension.html http/tests/paymentrequest/payment-response-payerPhone-attribute.https.html http/tests/paymentrequest/payment-request-show-method.https.html http/tests/paymentrequest/rejects_if_not_active.https.html http/tests/adClickAttribution/anchor-tag-attributes-validation.html http/tests/paymentrequest/updateWith-method-pmi-handling.https.html http/tests/paymentrequest/payment-response-rejects-if-not-active.https.html http/tests/paymentrequest/payment-response-complete-method.https.html fast/dom/HTMLAnchorElement/anchor-file-blob-download-includes-backslash.html http/tests/paymentrequest/payment-response-payerEmail-attribute.https.html fast/files/file-reader-abort-using-open-panel.html http/tests/paymentrequest/payment-response-retry-method.https.html http/tests/paymentrequest/payment-request-canmakepayment-method.https.html http/tests/paymentrequest/payment-request-merchant-validation.https.html http/tests/paymentrequest/payment-request-abort-method.https.html http/tests/paymentrequest/payment-response-reference-cycle-leak.https.html
EWS Watchlist
Comment 5 2019-04-27 22:44:27 PDT
Created attachment 368424 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.14.4
alan
Comment 6 2019-04-29 10:47:28 PDT
I can repro these failures locally even with my change stashed.
alan
Comment 7 2019-04-29 12:39:57 PDT
Wenson Hsieh
Comment 8 2019-04-29 13:39:56 PDT
Comment on attachment 368475 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=368475&action=review > Source/WebCore/page/ios/FrameIOS.mm:427 > + auto node = hitTestResult.innerNode(); Nit - auto*? > Source/WebKit/WebProcess/WebPage/ios/WebPageIOS.mm:734 > + auto shiftKey = modifiers.contains(WebEvent::Modifier::ShiftKey); Nit - I *think* we prefer bool over auto in cases like this 🤷🏻‍♂️ > LayoutTests/fast/events/touch/ios/double-tap-for-double-click2.html:51 > + setTimeout("testRunner.notifyDone()", 0); Nit - it looks like there's a tab character somewhere here. > LayoutTests/fast/events/touch/ios/double-tap-for-double-click3.html:50 > + setTimeout("testRunner.notifyDone()", 0); Nit - another tab.
alan
Comment 9 2019-04-29 13:45:09 PDT
WebKit Commit Bot
Comment 10 2019-04-29 14:31:05 PDT
Comment on attachment 368488 [details] Patch Clearing flags on attachment: 368488 Committed r244755: <https://trac.webkit.org/changeset/244755>
WebKit Commit Bot
Comment 11 2019-04-29 14:31:07 PDT
All reviewed patches have been landed. Closing bug.
Truitt Savell
Comment 12 2019-04-29 16:55:56 PDT
Reverted r244755 for reason: Casued several test failures on iOS Committed r244762: <https://trac.webkit.org/changeset/244762>
alan
Comment 13 2019-04-29 21:19:15 PDT
WebKit Commit Bot
Comment 14 2019-04-30 09:07:53 PDT
Comment on attachment 368536 [details] Patch Clearing flags on attachment: 368536 Committed r244775: <https://trac.webkit.org/changeset/244775>
WebKit Commit Bot
Comment 15 2019-04-30 09:07:55 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.